--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -20,18 +20,25 @@ services:
     container_name: intentforge-server
     restart: unless-stopped
     ports:
-      - "8000:8000"
+      - "${APP_PORT:-8000}:${APP_PORT:-8000}"
     environment:
-      - ENVIRONMENT=production
+      - ENVIRONMENT=${ENVIRONMENT:-production}
+      - HOST=${APP_HOST:-0.0.0.0}
+      - PORT=${APP_PORT:-8000}
       - DB_HOST=postgres
+      - DB_PORT=${DB_PORT:-5432}
+      - DB_NAME=${DB_NAME:-intentforge}
+      - DB_USER=${DB_USER:-postgres}
+      - DB_PASSWORD=${DB_PASSWORD:-intentforge}
       - MQTT_HOST=mosquitto
-      - REDIS_URL=redis://redis:6379/0
+      - MQTT_PORT=${MQTT_PORT:-1883}
+      - REDIS_URL=redis://redis:${REDIS_PORT:-6379}/0
       # LLM Configuration - set via .env
       - LLM_PROVIDER=${LLM_PROVIDER:-anthropic}
       - LLM_MODEL=${LLM_MODEL:-claude-sonnet-4-5-20250929}
       - LLM_API_KEY=${LLM_API_KEY:-}
-      - OLLAMA_HOST=${OLLAMA_HOST:-http://ollama:11434}
-      - LITELLM_API_BASE=${LITELLM_API_BASE:-http://litellm:4000}
+      - OLLAMA_HOST=${OLLAMA_HOST:-http://ollama:${OLLAMA_PORT:-11434}}
+      - LITELLM_API_BASE=${LITELLM_API_BASE:-http://litellm:${LITELLM_PORT:-4000}}
     env_file:
       - .env
     depends_on:
@@ -47,7 +54,7 @@ services:
     networks:
       - intentforge-network
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
+      test: ["CMD", "curl", "-f", "http://localhost:${APP_PORT:-8000}/health"]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -61,8 +68,8 @@ services:
     container_name: intentforge-mqtt
     restart: unless-stopped
     ports:
-      - "1883:1883"
-      - "9001:9001"
+      - "${MQTT_PORT_EXTERNAL:-1883}:${MQTT_PORT:-1883}"
+      - "${MQTT_WEBSOCKET_PORT_EXTERNAL:-9001}:${MQTT_WEBSOCKET_PORT:-9001}"
     volumes:
       - ./docker/config/mosquitto.conf:/mosquitto/config/mosquitto.conf:ro
       - mosquitto-data:/mosquitto/data
@@ -78,7 +85,7 @@ services:
     container_name: intentforge-db
     restart: unless-stopped
     ports:
-      - "5432:5432"
+      - "${DB_PORT_EXTERNAL:-5432}:${DB_PORT:-5432}"
     environment:
       - POSTGRES_USER=${DB_USER:-postgres}
       - POSTGRES_PASSWORD=${DB_PASSWORD:-intentforge}
@@ -103,7 +110,7 @@ services:
     container_name: intentforge-cache
     restart: unless-stopped
     ports:
-      - "6379:6379"
+      - "${REDIS_PORT_EXTERNAL:-6379}:${REDIS_PORT:-6379}"
     command: redis-server --appendonly yes
     volumes:
       - redis-data:/data
@@ -124,7 +131,7 @@ services:
     container_name: intentforge-web
     restart: unless-stopped
     ports:
-      - "80:80"
+      - "${WEB_PORT:-80}:80"
     volumes:
       - ./frontend:/usr/share/nginx/html:ro
       - ./docker/config/nginx.conf:/etc/nginx/nginx.conf:ro
@@ -138,26 +145,26 @@ services:
   # Ollama (Local LLM) - Optional
   # ==========================================================================
   
-  ollama:
-    image: ollama/ollama:latest
-    container_name: intentforge-ollama
-    profiles: ["ollama", "full"]
-    restart: unless-stopped
-    ports:
-      - "11434:11434"
-    volumes:
-      - ollama-data:/root/.ollama
-    networks:
-      - intentforge-network
-    # Pull default model on first start
-    # Run: docker exec intentforge-ollama ollama pull llama3
-    deploy:
-      resources:
-        reservations:
-          devices:
-            - driver: nvidia
-              count: all
-              capabilities: [gpu]
+#  ollama:
+#    image: ollama/ollama:latest
+#    container_name: intentforge-ollama
+#    profiles: ["ollama", "full"]
+#    restart: unless-stopped
+#    ports:
+#      - "11434:11434"
+#    volumes:
+#      - ollama-data:/root/.ollama
+#    networks:
+#      - intentforge-network
+#    # Pull default model on first start
+#    # Run: docker exec intentforge-ollama ollama pull llama3
+#    deploy:
+#      resources:
+#        reservations:
+#          devices:
+#            - driver: nvidia
+#              count: all
+#              capabilities: [gpu]
     # For CPU-only, remove the deploy section above
 
   # ==========================================================================
@@ -170,7 +177,7 @@ services:
     profiles: ["litellm", "full"]
     restart: unless-stopped
     ports:
-      - "4000:4000"
+      - "${LITELLM_PORT_EXTERNAL:-4000}:${LITELLM_PORT:-4000}"
     environment:
       # Add API keys for providers you want to use
       - ANTHROPIC_API_KEY=${ANTHROPIC_API_KEY:-}
@@ -178,10 +185,10 @@ services:
       - AZURE_API_KEY=${AZURE_API_KEY:-}
       - COHERE_API_KEY=${COHERE_API_KEY:-}
       # Ollama connection
-      - OLLAMA_API_BASE=http://ollama:11434
+      - OLLAMA_API_BASE=http://ollama:${OLLAMA_PORT:-11434}
     volumes:
       - ./docker/config/litellm_config.yaml:/app/config.yaml:ro
-    command: ["--config", "/app/config.yaml", "--port", "4000"]
+    command: ["--config", "/app/config.yaml", "--port", "${LITELLM_PORT:-4000}"]
     networks:
       - intentforge-network
     depends_on:
@@ -197,7 +204,7 @@ services:
     profiles: ["dev"]
     restart: unless-stopped
     ports:
-      - "5050:80"
+      - "${PGADMIN_PORT:-5050}:80"
     environment:
       - PGADMIN_DEFAULT_EMAIL=admin@example.com
       - PGADMIN_DEFAULT_PASSWORD=admin
@@ -214,9 +221,9 @@ services:
     profiles: ["dev"]
     restart: unless-stopped
     ports:
-      - "8081:8081"
+      - "${REDIS_COMMANDER_PORT:-8081}:8081"
     environment:
-      - REDIS_HOSTS=local:redis:6379
+      - REDIS_HOSTS=local:redis:${REDIS_PORT:-6379}
     depends_on:
       - redis
     networks:
