--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,9 @@
 # IntentForge Configuration
 # Copy to .env and modify for your environment
 # =============================================================================
+# This is the single source of truth for all environment configuration.
+# Used by: Python (pydantic-settings), Docker Compose, and frontend.
+# =============================================================================
 
 # -----------------------------------------------------------------------------
 # Application Settings
@@ -12,9 +15,12 @@ LOG_LEVEL=INFO
 LOG_FORMAT=json
 
 # Server
-HOST=0.0.0.0
-PORT=8000
-WORKERS=4
+APP_HOST=0.0.0.0
+APP_PORT=8000
+APP_WORKERS=4
+
+# Web/Nginx
+WEB_PORT=80
 
 # -----------------------------------------------------------------------------
 # Database Configuration
@@ -22,6 +28,7 @@ WORKERS=4
 DB_DRIVER=postgresql
 DB_HOST=localhost
 DB_PORT=5432
+DB_PORT_EXTERNAL=5432
 DB_NAME=intentforge
 DB_USER=postgres
 DB_PASSWORD=your_secure_password_here
@@ -40,7 +47,9 @@ DB_POOL_RECYCLE=3600
 # -----------------------------------------------------------------------------
 MQTT_HOST=localhost
 MQTT_PORT=1883
+MQTT_PORT_EXTERNAL=1883
 MQTT_WEBSOCKET_PORT=9001
+MQTT_WEBSOCKET_PORT_EXTERNAL=9001
 # MQTT_USERNAME=
 # MQTT_PASSWORD=
 MQTT_TOPIC_PREFIX=intentforge
@@ -70,14 +79,17 @@ LLM_MAX_RETRIES=3
 LLM_RETRY_DELAY=1.0
 
 # -----------------------------------------------------------------------------
-# Cache Configuration
+# Cache Configuration (Redis)
 # -----------------------------------------------------------------------------
 CACHE_BACKEND=memory  # Options: memory, redis, file
 CACHE_DEFAULT_TTL=3600
 CACHE_MAX_ENTRIES=10000
 
-# Redis (if CACHE_BACKEND=redis)
-CACHE_REDIS_URL=redis://localhost:6379/0
+# Redis
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_PORT_EXTERNAL=6379
+REDIS_URL=redis://localhost:6379/0
 
 # File cache (if CACHE_BACKEND=file)
 CACHE_FILE_PATH=/tmp/intentforge_cache
@@ -111,3 +123,29 @@ VALIDATION_SANDBOX_MEMORY_LIMIT=256m
 # OpenTelemetry tracing
 # OTEL_EXPORTER_OTLP_ENDPOINT=http://localhost:4317
 # OTEL_SERVICE_NAME=intentforge
+
+# -----------------------------------------------------------------------------
+# LLM Providers (Optional)
+# -----------------------------------------------------------------------------
+# Ollama (local LLM)
+OLLAMA_HOST=http://localhost:11434
+OLLAMA_PORT=11434
+OLLAMA_PORT_EXTERNAL=11434
+
+# LiteLLM Proxy
+LITELLM_API_BASE=http://localhost:4000
+LITELLM_PORT=4000
+LITELLM_PORT_EXTERNAL=4000
+
+# -----------------------------------------------------------------------------
+# Development Tools (Optional)
+# -----------------------------------------------------------------------------
+PGADMIN_PORT=5050
+REDIS_COMMANDER_PORT=8081
+
+# -----------------------------------------------------------------------------
+# E2E Testing
+# -----------------------------------------------------------------------------
+TEST_BASE_URL=http://localhost:${WEB_PORT:-80}
+TEST_API_URL=http://localhost:${APP_PORT:-8000}
+HEADLESS=true
