Fix MQTT callback signature for v2 API

--- a/.env.example
+++ b/.env.example
@@ -17,6 +17,7 @@ LOG_FORMAT=json
 # Server
 APP_HOST=0.0.0.0
 APP_PORT=8000
+APP_PORT_EXTERNAL=8000
 APP_WORKERS=4
 
 # Web/Nginx
@@ -147,5 +148,5 @@ REDIS_COMMANDER_PORT=8081
 # E2E Testing
 # -----------------------------------------------------------------------------
 TEST_BASE_URL=http://localhost:${WEB_PORT:-80}
-TEST_API_URL=http://localhost:${APP_PORT:-8000}
+TEST_API_URL=http://localhost:${APP_PORT_EXTERNAL:-8000}
 HEADLESS=true
