--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.9"
-
 services:
   # ==========================================================================
   # IntentForge Server
@@ -8,10 +6,11 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+      target: runtime
     container_name: intentforge-server
     restart: unless-stopped
     ports:
-      - "${APP_PORT:-8000}:${APP_PORT:-8000}"
+      - "${APP_PORT_EXTERNAL:-8000}:${APP_PORT:-8000}"
     environment:
       - ENVIRONMENT=${ENVIRONMENT:-production}
       - HOST=${APP_HOST:-0.0.0.0}
@@ -39,7 +38,7 @@ services:
     networks:
       - intentforge-network
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:${APP_PORT:-8000}/health"]
+      test: ["CMD", "python", "-c", "import os,urllib.request; urllib.request.urlopen('http://localhost:%s/health' % os.getenv('PORT','8000')).read()"]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -51,6 +50,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+      target: worker
     container_name: intentforge-worker
     command: python -m intentforge.worker
     restart: unless-stopped
@@ -139,7 +139,8 @@ services:
     ports:
       - "${WEB_PORT:-80}:80"
     volumes:
-      - ./static:/usr/share/nginx/html:ro
+      - ./frontend:/usr/share/nginx/html/frontend:ro
+      - ./examples:/usr/share/nginx/html/examples:ro
       - ./config/nginx.conf:/etc/nginx/nginx.conf:ro
     depends_on:
       - intentforge
@@ -150,7 +151,7 @@ services:
   # ==========================================================================
   # Development Tools (optional)
   # ==========================================================================
-  
+
   # pgAdmin for database management
   pgadmin:
     image: dpage/pgadmin4:latest
@@ -190,9 +191,6 @@ services:
 networks:
   intentforge-network:
     driver: bridge
-    ipam:
-      config:
-        - subnet: 172.28.0.0/16
 
 # ==========================================================================
 # Volumes
