--- a/docker/config/nginx.conf
+++ b/docker/config/nginx.conf
@@ -32,7 +32,7 @@ http {
     gzip_vary on;
     gzip_proxied any;
     gzip_comp_level 6;
-    gzip_types text/plain text/css text/xml application/json application/javascript 
+    gzip_types text/plain text/css text/xml application/json application/javascript
                application/xml application/xml+rss text/javascript;
 
     # Upstream servers
@@ -44,7 +44,7 @@ http {
     server {
         listen 80;
         server_name localhost;
-        root /usr/share/nginx/html;
+        root /usr/share/nginx/html/frontend;
         index index.html;
 
         # Security headers
@@ -59,6 +59,13 @@ http {
             add_header Cache-Control "public, immutable";
         }
 
+        location /examples/ {
+            alias /usr/share/nginx/html/examples/;
+            try_files $uri $uri/ =404;
+            expires 1d;
+            add_header Cache-Control "public, immutable";
+        }
+
         # API proxy
         location /api/ {
             proxy_pass http://api;
@@ -68,7 +75,7 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_set_header Connection "";
-            
+
             # Timeout settings
             proxy_connect_timeout 60s;
             proxy_send_timeout 60s;
