--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       context: .
       dockerfile: Dockerfile
       target: runtime
+    command: python examples/server.py
     container_name: intentforge-server
     restart: unless-stopped
     ports:
@@ -23,7 +24,13 @@ services:
       - MQTT_HOST=mosquitto
       - MQTT_PORT=${MQTT_PORT:-1883}
       - CACHE_BACKEND=redis
+      - CACHE_BACKEND=redis
       - REDIS_URL=redis://redis:${REDIS_PORT:-6379}/0
+      # Force Ollama configuration
+      - LLM_PROVIDER=ollama
+      - LLM_MODEL=llama3.1:8b
+      - OLLAMA_HOST=http://172.17.0.1:11434
+      - OLLAMA_PORT=11434
     env_file:
       - .env
     depends_on:
