--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -55,20 +55,17 @@ http {
         # Static files
         location / {
             try_files $uri $uri/ /index.html;
-            expires 1d;
-            add_header Cache-Control "public, immutable";
+            expires -1;
+            add_header Cache-Control "no-store, no-cache, must-revalidate";
         }
 
-        # Force JavaScript MIME type
-        location ~* \.js$ {
-            add_header Content-Type application/javascript;
-        }
+
 
         location /examples/ {
-            alias /usr/share/nginx/html/examples/;
+            root /usr/share/nginx/html;
             try_files $uri $uri/ =404;
-            expires 1d;
-            add_header Cache-Control "public, immutable";
+            expires -1;
+            add_header Cache-Control "no-store, no-cache, must-revalidate";
         }
 
         # API proxy
