--- a/pyproject.toml
+++ b/pyproject.toml
@@ -74,6 +74,7 @@ server = [
     "sqlalchemy>=2.0",
     "asyncpg>=0.29",
     "redis>=5.0",
+    "python-multipart",
 ]
 all = [
     "intentforge[dev,test,docs,server]",
