--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,26 +11,29 @@ services:
     container_name: intentforge-server
     restart: unless-stopped
     ports:
-      - "${APP_PORT_EXTERNAL:-8000}:${APP_PORT:-8000}"
+      - "${APP_PORT_EXTERNAL}:${APP_PORT}"
     environment:
-      - ENVIRONMENT=${ENVIRONMENT:-production}
-      - HOST=${APP_HOST:-0.0.0.0}
-      - PORT=${APP_PORT:-8000}
+      - ENVIRONMENT=${ENVIRONMENT}
+      - HOST=${APP_HOST}
+      - PORT=${APP_PORT}
       - DB_HOST=postgres
-      - DB_PORT=${DB_PORT:-5432}
-      - DB_NAME=${DB_NAME:-intentforge}
-      - DB_USER=${DB_USER:-postgres}
-      - DB_PASSWORD=${DB_PASSWORD:-intentforge}
+      - DB_PORT=${DB_PORT}
+      - DB_NAME=${DB_NAME}
+      - DB_USER=${DB_USER}
+      - DB_PASSWORD=${DB_PASSWORD}
       - MQTT_HOST=mosquitto
-      - MQTT_PORT=${MQTT_PORT:-1883}
+      - MQTT_PORT=${MQTT_PORT}
       - CACHE_BACKEND=redis
-      - CACHE_BACKEND=redis
-      - REDIS_URL=redis://redis:${REDIS_PORT:-6379}/0
-      # Force Ollama configuration
-      - LLM_PROVIDER=ollama
-      - LLM_MODEL=llama3.1:8b
-      - OLLAMA_HOST=http://172.17.0.1:11434
-      - OLLAMA_PORT=11434
+      - REDIS_URL=redis://redis:${REDIS_PORT}/0
+      - LLM_PROVIDER=${LLM_PROVIDER}
+      - LLM_MODEL=${LLM_MODEL}
+      - OLLAMA_HOST=${OLLAMA_HOST}
+      - OLLAMA_PORT=${OLLAMA_PORT}
+      - LLM_MAX_TOKENS=${LLM_MAX_TOKENS}
+      - LLM_TEMPERATURE=${LLM_TEMPERATURE}
+      - LLM_REQUESTS_PER_MINUTE=${LLM_REQUESTS_PER_MINUTE}
+      - LLM_TOKENS_PER_MINUTE=${LLM_TOKENS_PER_MINUTE}
+      - LLM_MAX_RETRIES=${LLM_MAX_RETRIES}
     env_file:
       - .env
     depends_on:
@@ -62,12 +65,19 @@ services:
     command: python -m intentforge.worker
     restart: unless-stopped
     environment:
-      - ENVIRONMENT=${ENVIRONMENT:-production}
+      - ENVIRONMENT=${ENVIRONMENT}
       - DB_HOST=postgres
-      - DB_PORT=${DB_PORT:-5432}
+      - DB_PORT=${DB_PORT}
+      - DB_NAME=${DB_NAME}
+      - DB_USER=${DB_USER}
+      - DB_PASSWORD=${DB_PASSWORD}
       - MQTT_HOST=mosquitto
-      - MQTT_PORT=${MQTT_PORT:-1883}
-      - REDIS_URL=redis://redis:${REDIS_PORT:-6379}/0
+      - MQTT_PORT=${MQTT_PORT}
+      - REDIS_URL=redis://redis:${REDIS_PORT}/0
+      - LLM_PROVIDER=${LLM_PROVIDER}
+      - LLM_MODEL=${LLM_MODEL}
+      - OLLAMA_HOST=${OLLAMA_HOST}
+      - OLLAMA_PORT=${OLLAMA_PORT}
     env_file:
       - .env
     depends_on:
@@ -83,8 +93,8 @@ services:
     container_name: intentforge-mqtt
     restart: unless-stopped
     ports:
-      - "${MQTT_PORT_EXTERNAL:-1883}:${MQTT_PORT:-1883}"      # MQTT
-      - "${MQTT_WEBSOCKET_PORT_EXTERNAL:-9001}:${MQTT_WEBSOCKET_PORT:-9001}"      # WebSocket
+      - "${MQTT_PORT_EXTERNAL}:${MQTT_PORT}"      # MQTT
+      - "${MQTT_WEBSOCKET_PORT_EXTERNAL}:9001"      # WebSocket
     volumes:
       - ./config/mosquitto.conf:/mosquitto/config/mosquitto.conf:ro
       - mosquitto-data:/mosquitto/data
@@ -100,7 +110,7 @@ services:
     container_name: intentforge-db
     restart: unless-stopped
     ports:
-      - "${DB_PORT_EXTERNAL:-5432}:${DB_PORT:-5432}"
+      - "${DB_PORT_EXTERNAL}:${DB_PORT}"
     environment:
       - POSTGRES_USER=${DB_USER:-postgres}
       - POSTGRES_PASSWORD=${DB_PASSWORD:-intentforge}
@@ -124,7 +134,7 @@ services:
     container_name: intentforge-cache
     restart: unless-stopped
     ports:
-      - "${REDIS_PORT_EXTERNAL:-6379}:${REDIS_PORT:-6379}"
+      - "${REDIS_PORT_EXTERNAL}:${REDIS_PORT}"
     command: redis-server --appendonly yes
     volumes:
       - redis-data:/data
@@ -144,7 +154,7 @@ services:
     container_name: intentforge-web
     restart: unless-stopped
     ports:
-      - "${WEB_PORT:-80}:80"
+      - "${WEB_PORT}:80"
     volumes:
       - ./frontend:/usr/share/nginx/html/frontend:ro
       - ./examples:/usr/share/nginx/html/examples:ro
