--- a/.env.example
+++ b/.env.example
@@ -133,6 +133,16 @@ OLLAMA_HOST=http://localhost:11434
 OLLAMA_PORT=11434
 OLLAMA_PORT_EXTERNAL=11434
 
+# -----------------------------------------------------------------------------
+# Vision/Image Analysis (Ollama with LLaVA)
+# -----------------------------------------------------------------------------
+# Vision model for image analysis (OCR, object detection, description)
+VISION_PROVIDER=ollama
+VISION_MODEL=llava:13b
+# Alternative models: llava:7b, llava:34b, bakllava:latest, llama3.2-vision:11b
+VISION_MAX_TOKENS=2048
+VISION_TEMPERATURE=0.1
+
 # LiteLLM Proxy
 LITELLM_API_BASE=http://localhost:4000
 LITELLM_PORT=4000
