--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,6 +63,9 @@ test = [
     "httpx>=0.27",
     "respx>=0.20",
 ]
+e2e = [
+    "playwright>=1.40",
+]
 docs = [
     "mkdocs>=1.5",
     "mkdocs-material>=9.5",
@@ -77,7 +80,7 @@ server = [
     "python-multipart",
 ]
 all = [
-    "intentforge[dev,test,docs,server]",
+    "intentforge[dev,test,e2e,docs,server]",
 ]
 
 [project.scripts]
